<resources>
    <string name="app_name">Sketchify</string>
    <string name="photo_sketch_maker">SKETCHIFY</string>
    <string name="choose_image">Click Here To Choose Image</string>
    <string name="original">Original</string>
    <string name="sketch_1">Sketch 1</string>
    <string name="sketch_2">Sketch 2</string>
    <string name="sketch_3">Sketch 3</string>
    <string name="sketch_4">Sketch 4</string>
    <string name="sketch_5">Sketch 5</string>
    <string name="sketch_6">Sketch 6</string>
    <string name="sketch_7">Sketch 7</string>
    <string name="sketch_8">Sketch 8</string>
    <string name="sketch_9">Sketch 9</string>
    <string name="b_w"><![CDATA[B & W]]></string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="add_new">Add New</string>
    <string name="admob_id">ca-app-pub-9881909229934261~8744465039</string>
<!--    <string name="banner_ad_id">ca-app-pub-9881909229934261/6039206802</string>-->
    <string name="banner_ad_id">ca-app-pub-3940256099942544/9214589741</string>
</resources>