<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mainColor">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border1"
            android:fontFamily="@font/londrina_sketch_regular"
            android:letterSpacing="0.2"
            android:padding="5dp"
            android:text="@string/photo_sketch_maker"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:visibility="gone"
            android:src="@drawable/save_image_icon"
            android:background="@drawable/rounded_shape"/>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_below="@+id/toolbar">

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/reset"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:text="@string/save"/>

        <Button
            android:id="@+id/otherImageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_new"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageLayout"
        android:gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttonLayout"
        android:background="@drawable/border"
        android:layout_above="@+id/fixLayout">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/chooseImageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/selectImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:maxHeight="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chooseimage"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_image"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="18dp"
                    android:background="@drawable/border1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:letterSpacing="0.1"
                    android:fontFamily="@font/londrina_sketch_regular"
                    android:textStyle="bold"/>

            </LinearLayout>


            <ImageView
                android:id="@+id/iv_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="10dp"
                android:scaleType="fitCenter"
                android:visibility="gone"
                android:layout_centerInParent="true" />

            <ProgressBar
                android:id="@+id/pb"
                android:visibility="invisible"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fixLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_pb"
            android:layout_margin="32dp"
            tools:text="100"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/simpleSeekBar"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:layout_height="50dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/white"
            app:tabIndicatorColor="@color/design_default_color_on_secondary"
            app:tabIndicatorHeight="1dp"
            app:tabMode="scrollable"
            android:layout_marginBottom="10dp"
            app:tabPaddingStart="0dp"
            app:tabPaddingEnd="0dp"/>


    </LinearLayout>


</RelativeLayout>